# dxl

./: .envrc  .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
driver/: Cargo.toml
driver/src/: actuator.rs  bus.rs  comm.rs  lib.rs  mutex.rs
examples/: goal_position_512.rs  torque_on_packet_bytes.rs
host-examples/: Cargo.toml
host-examples/examples/: read_positions.rs
packet/: Cargo.toml
packet/examples/: goal_position_512.rs  torque_on_packet_bytes.rs
packet/src/: constants.rs  control_table.rs  crc.rs  lib.rs  parse.rs  recv.rs  send.rs  stream.rs  test_util.rs
packet/src/instruction/: mod.rs  recv.rs  send.rs
packet/src/packet/: mod.rs  recv.rs  send.rs
rp/: Cargo.toml
rp-examples/: Cargo.toml  build.rs  memory.x
rp-examples/.cargo/: config.toml
rp-examples/examples/: back_and_forth.rs  baud_from_57_600_to_1_000_000.rs  ble_receiver.rs.broken  ble_transmitter.rs.broken  burglemixel-locked.rs  burglemixel.rs  camera_rig.rs  find_stops.rs  id_to_1.rs  keyframes.rs  led.rs  mocap_transmitter.rs  osc-receiver.rs  read_arm_only.rs  read_positions.rs  scan.rs  scan_1000000_baud.rs  show_edited.rs  show_mar_19_2025.rs  sine-fixed.rs  sine.rs  sniff.rs  three_heads.rs  three_heads_with_keep_alive.rs  u2d2-emulator.rs  udp.rs  usb.rs  voltage.rs  wifi_basic.rs
rp-examples/src/: lib.rs
rp/.cargo/: config.toml
rp/src/: lib.rs  pull_high.rs  rx_stream.rs  serial.rs
src/: constants.rs  control_table.rs  crc.rs  lib.rs  parse.rs  stream.rs  test_util.rs
src/compiletime/: control_table.rs  instruction.rs  mod.rs
src/compiletime/instruction/: mod.rs  recv.rs  send.rs
src/compiletime/packet/: mod.rs  recv.rs  send.rs
src/instruction/: mod.rs  send.rs
src/packet/: mod.rs  recv.rs  send.rs
src/runtime/: protocol.rs
